# readingsync

./: CLAUDE.md  Cargo.toml  README.md
src/: apple_books.rs  config.rs  error.rs  lib.rs  main.rs  merge.rs  model.rs
src/kindle/: browser.rs  clippings.rs  mod.rs  scraper.rs
