[package]
name = "bookexport"
version = "0.1.0"
edition = "2021"
description = "Export reading highlights from Apple Books and Kindle"
license = "MIT"

[dependencies]
# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
dirs = "5.0"
sha2 = "0.10"
glob = "0.3"
thiserror = "1.0"
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }

# Web scraping
reqwest = { version = "0.12", features = ["blocking", "cookies"] }
scraper = "0.20"
cookie_store = "0.21"
url = "2.5"
